# routing

./: .gitignore  Cargo.toml  README.md
data/: St_Brieuc-Loudéac.osm.pbf  composition_bretagne.txt  osmium_cde.txt
src/: cli.rs  graphe.rs  main.rs  routing.rs
src/graphe/: elements.rs  reader.rs
src/routing/: dijkstra.rs  distances.rs  location.rs
