[package]
name = "route"
version = "1.1.0"
edition = "2021"
authors = ["Thierry Probst <thierry.probst@free.fr>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.3.0", features = ["derive"] }
osmpbf = "0.3.0"
rand = { version = "0.8.5", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
gpx = "0.9.1"
geo-types = "0.7.9"

# [profile.release]
# opt-level = 3
# debug = 0
# strip = "debuginfo"
# overflow-check = false
